Changed answers to Q4 and Q6

--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
             <li>
                 <dl>
                     <dt>Given an element that has an id of title and a class of primary, how would you use both attributes for a single rule?</dt>
-                        <dd>#selector, .selector { property: value; }</dd>
+                        <dd>#title, .primary { property: value; }</dd>
+                        <dd></dd>
                 </dl> 
                 <br>
             </li>
@@ -55,7 +56,7 @@
             <li>
                 <dl>
                     <dt>Between a rule that uses one class selector and a rule that uses three type selectors, which rule has the higher specificity?</dt>
-                        <dd>The one class selector</dd>
+                        <dd>The three type selectors because the more selectors you use for a rule the more importance it has.</dd>
                 </dl> 
                 <br>
             </li>
