Changed answer to question 6

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <li>
                 <dl>
                     <dt>Between a rule that uses one class selector and a rule that uses three type selectors, which rule has the higher specificity?</dt>
-                        <dd>The three type selectors because the more selectors you use for a rule the more importance it has.</dd>
+                        <dd>The class selector.</dd>
                 </dl> 
                 <br>
             </li>
